# SPLN2024

./: .gitignore  README.md
TPC1/: README.md
TPC2/: README.md
TPC2/wfModule/: pyproject.toml
TPC2/wfModule/resources/: output.txt
TPC2/wfModule/resources/pt/: cleanUp.py
TPC2/wfModule/wf/: __init__.py
TPC3/templateModule/: README.md  template.py
TPC4/: README.md
TPC4/cleanUpModule/: __init__.py  dicGeral.json  dicPT.json
TPC4/cleanUpModule/abreviações/: f_pt.txt  i_en.txt  i_pt.txt
TPC4/cleanUpModule/abreviações/formal/: volp-acp.txt  waze.txt
TPC4/cleanUpModule/abreviações/informal/: globo.txt
TPC4/cleanUpModule/abreviações/inglesas/: english_acronyms-.txt  explícito.txt
TPC5/: HP.md  HPOriginalClean.md  README.md  friends.py  script.py
cleanUpModule/: dicEN.json  dicGeral.json  dicPT.json
cleanUpModule/abreviações/: fontes.txt
cleanUpModule/abreviações/formal/: volp-acp.txt
cleanUpModule/abreviações/informal/: caminhoslanguages_brazilian-internet-slang-abbreviations.txt  dnacriativo.txt  explícito.txt  iscte.txt
cleanUpModule/abreviações/inglesas/: slicktext_text-abbreviations-guide.txt
n1/: script.py  template.py
p1/resources/pt/: output.txt
templateModule/: pyproject.toml  script.py  template.py
wfModule/: LICENSE  pyproject.toml
wfModule/wf/: __init__.py  teste2.txt
