[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "wf"
authors = [{ name = "diogo", email = "dbarbosa15987@gmail.com" }]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = ["jjcli"]


[project.scripts]
wf = "wf:main"


